Created 0.23.0-branch and updated appveyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,12 +1,15 @@
 version: 0.23.0.{build}
 
+init:
+  - cmd: git config --global --add safe.directory /cygdrive/c/projects/opensc
+
 platform:
   - x86
-  - x64
+#  - x64
 
 configuration:
   - Release
-  - Light
+#  - Light
 
 environment:
   GH_TOKEN:
@@ -18,11 +21,12 @@ environment:
   # not compatible with OpenSSL 1.1.1:
   # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
   #   VCVARSALL: "%VS120COMNTOOLS%/../../VC/vcvarsall.bat"
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    VCVARSALL: "%VS140COMNTOOLS%/../../VC/vcvarsall.bat"
-    DO_PUSH_ARTIFACT: yes
+#  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+#    VCVARSALL: "%VS140COMNTOOLS%/../../VC/vcvarsall.bat"
+#    DO_PUSH_ARTIFACT: yes
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     VCVARSALL: "%ProgramFiles(x86)%/Microsoft Visual Studio/2017/Community/VC/Auxiliary/Build/vcvarsall.bat"
+    DO_PUSH_ARTIFACT: yes
   # not compatible with WiX 3.11.2:
   # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
   #   VCVARSALL: "%ProgramFiles(x86)%/Microsoft Visual Studio/2019/Community/VC/Auxiliary/Build/vcvarsall.bat"
@@ -90,7 +94,7 @@ build_script:
           # OpenSSL 1.0.2
           #cl /nologo /IC:\OpenSSL-${env:OPENSSL_PF}\include /I. /DX509DIR=\`"/\`" /DCVCDIR=\`"/\`" /W3 /D_CRT_SECURE_NO_DEPRECATE /DWIN32_LEAN_AND_MEAN /GS /MT /c ca_lib.c cv_cert.c cvc_lookup.c x509_lookup.c eac_asn1.c eac.c eac_ca.c eac_dh.c eac_ecdh.c eac_kdf.c eac_lib.c eac_print.c eac_util.c misc.c pace.c pace_lib.c pace_mappings.c ri.c ri_lib.c ta.c ta_lib.c objects.c ssl_compat.c
           lib /nologo /out:libeac.lib ca_lib.obj cv_cert.obj cvc_lookup.obj x509_lookup.obj eac_asn1.obj eac.obj eac_ca.obj eac_dh.obj eac_ecdh.obj eac_kdf.obj eac_lib.obj eac_print.obj eac_util.obj misc.obj pace.obj pace_lib.obj pace_mappings.obj ri.obj ri_lib.obj ta.obj ta_lib.obj objects.obj ssl_compat.obj
-          cd C:\projects\OpenSC
+          cd ${env:APPVEYOR_BUILD_FOLDER}
         }
         $env:NMAKE_EXTRA+=" OPENPACE_DEF=/DENABLE_OPENPACE OPENPACE_DIR=C:\openpace-${env:OPENSSL_PF}"
       }
@@ -99,25 +103,30 @@ build_script:
   - bash -c "exec 0</dev/null && if [ \"$APPVEYOR_REPO_BRANCH\" != \"master\" -a -z \"$APPVEYOR_PULL_REQUEST_NUMBER\" ]; then ./bootstrap.ci -s \"-$APPVEYOR_REPO_BRANCH\"; fi"
   - bash -c "exec 0</dev/null && if [ \"$APPVEYOR_REPO_BRANCH\" != \"master\" -a -n \"$APPVEYOR_PULL_REQUEST_NUMBER\" ]; then ./bootstrap.ci -s \"-$APPVEYOR_REPO_BRANCH-prAPPVEYOR_PULL_REQUEST_NUMBER\"; fi"
   # disable features to speed up the script
-  - bash -c "exec 0</dev/null && ./configure --with-cygwin-native --disable-openssl --disable-readline --disable-zlib || cat config.log"
+  - bash -c "exec 0</dev/null && ./configure --with-cygwin-native --disable-readline --disable-zlib || cat config.log"
   - bash -c "exec 0</dev/null && rm src/getopt.h"
   - nmake /f Makefile.mak %NMAKE_EXTRA%
   - cd win32 && nmake /nologo /f Makefile.mak %NMAKE_EXTRA% OpenSC.msi && cd ..
   - move win32\OpenSC.msi %ARTIFACT%.msi
   # put all pdb files for dump analysis, but this consumes approx 100 MB per build
-  - md %ARTIFACT%-Debug
-  - ps: >-
-      Get-ChildItem -recurse C:\projects\OpenSC -exclude vc*.pdb *.pdb | % {
-        7z a -tzip ${env:ARTIFACT}-Debug.zip $_.FullName
-      }
+#  - md %ARTIFACT%-Debug
+#  - ps: >-
+  #    Get-ChildItem -recurse ${env:APPVEYOR_BUILD_FOLDER} -exclude vc*.pdb *.pdb | % {
+#        7z a -tzip ${env:ARTIFACT}-Debug.zip $_.FullName
+#      }
   - appveyor PushArtifact %ARTIFACT%.msi
-  - appveyor PushArtifact %ARTIFACT%-Debug.zip
+#  - appveyor PushArtifact %ARTIFACT%-Debug.zip
 
-deploy_script:
   # keep in sync with .travis.yml
   - bash -c "git config --global user.email 'no-reply@appveyor.com'"
   - bash -c "git config --global user.name 'AppVeyor'"
   - bash -c "if [ \"$DO_PUSH_ARTIFACT\" = yes -a -z \"$APPVEYOR_PULL_REQUEST_NUMBER\" -a \"$APPVEYOR_REPO_NAME\" = \"OpenSC/OpenSC\" ]; then .github/push_artifacts.sh \"AppVeyor build ${APPVEYOR_BUILD_NUMBER}.${APPVEYOR_JOB_NUMBER}\"; fi"
+
+#deploy:
+#- provider: Webhook
+#  url: #https://app.signpath.io/API/v1/8d2463fe-39bd-4a41-bb72-f008b4b1fe17/Integrations/AppVeyor?ProjectSlug=OpenSC&SigningPolicySlug=release-signing&ArtifactConfigurationSlug=initial
+#  authorization:
+#     secure: 73Qvk9MbD7M7ZcoO6NnSH7zDA+9wSKZqNc602b1UeA5v6GsDyEvpCOlzJ9VvBcUuePTKBRsZ+uGQYKsddABgQA==
 
 cache:
   - C:\zlib -> .appveyor.yml
