--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,28 +1,36 @@
 version: 0.24.0.{build}
 
+init:
+  - cmd: git config --global --add safe.directory /cygdrive/c/projects/opensc
+
+branches:
+  only:
+   - 0.24.0-rc1-5c1f08d
+
 platform:
   - x86
-  - x64
+#  - x64
 
 configuration:
   - Release
-  - Light
+#  - Light
 
 environment:
   GH_TOKEN:
-    secure: jeReA6BNx/dXVMGfroKadgVyPPLNrGL1pvLfc+sizlOLebm/+chuB9AcOi5mTdqHIb3E+TGIR+9fZ+kJotsjCF63ElwE8oJni0Ugrrs16SFwHLAnLpzZBQ5uuIOTVh1X
+    secure: aLu3tFc7lRJbotnmnHLx/QruIHc5rLaGm1RttoEdy4QILlPXzVkCZ6loYMz0sfrY
   PATH: C:\cygwin\bin;%PATH%
-  OPENPACE_VER: 1.1.3
+  OPENPACE_VER: 1.1.2
   ZLIB_VER_DOT: 1.2.12
   matrix:
   # not compatible with OpenSSL 1.1.1:
   # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
   #   VCVARSALL: "%VS120COMNTOOLS%/../../VC/vcvarsall.bat"
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    VCVARSALL: "%VS140COMNTOOLS%/../../VC/vcvarsall.bat"
-    DO_PUSH_ARTIFACT: yes
+#  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+#    VCVARSALL: "%VS140COMNTOOLS%/../../VC/vcvarsall.bat"
+#    DO_PUSH_ARTIFACT: yes
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     VCVARSALL: "%ProgramFiles(x86)%/Microsoft Visual Studio/2017/Community/VC/Auxiliary/Build/vcvarsall.bat"
+    DO_PUSH_ARTIFACT: yes
   # not compatible with WiX 3.11.2:
   # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
   #   VCVARSALL: "%ProgramFiles(x86)%/Microsoft Visual Studio/2019/Community/VC/Auxiliary/Build/vcvarsall.bat"
@@ -99,25 +107,30 @@ build_script:
   - bash -c "exec 0</dev/null && if [ \"$APPVEYOR_REPO_BRANCH\" != \"master\" -a -z \"$APPVEYOR_PULL_REQUEST_NUMBER\" ]; then ./bootstrap.ci -s \"-$APPVEYOR_REPO_BRANCH\"; fi"
   - bash -c "exec 0</dev/null && if [ \"$APPVEYOR_REPO_BRANCH\" != \"master\" -a -n \"$APPVEYOR_PULL_REQUEST_NUMBER\" ]; then ./bootstrap.ci -s \"-$APPVEYOR_REPO_BRANCH-prAPPVEYOR_PULL_REQUEST_NUMBER\"; fi"
   # disable features to speed up the script
-  - bash -c "exec 0</dev/null && ./configure --with-cygwin-native --disable-openssl --disable-readline --disable-zlib || cat config.log"
+  - bash -c "exec 0</dev/null && ./configure --with-cygwin-native --disable-readline --disable-zlib || cat config.log"
   - bash -c "exec 0</dev/null && rm src/getopt.h"
   - nmake /f Makefile.mak %NMAKE_EXTRA%
   - cd win32 && nmake /nologo /f Makefile.mak %NMAKE_EXTRA% OpenSC.msi && cd ..
   - move win32\OpenSC.msi %ARTIFACT%.msi
   # put all pdb files for dump analysis, but this consumes approx 100 MB per build
-  - md %ARTIFACT%-Debug
-  - ps: >-
-      Get-ChildItem -recurse C:\projects\OpenSC -exclude vc*.pdb *.pdb | % {
-        7z a -tzip ${env:ARTIFACT}-Debug.zip $_.FullName
-      }
+#  - md %ARTIFACT%-Debug
+#  - ps: >-
+  #    Get-ChildItem -recurse ${env:APPVEYOR_BUILD_FOLDER} -exclude vc*.pdb *.pdb | % {
+#        7z a -tzip ${env:ARTIFACT}-Debug.zip $_.FullName
+#      }
   - appveyor PushArtifact %ARTIFACT%.msi
-  - appveyor PushArtifact %ARTIFACT%-Debug.zip
+#  - appveyor PushArtifact %ARTIFACT%-Debug.zip
 
-deploy_script:
   # keep in sync with .travis.yml
   - bash -c "git config --global user.email 'no-reply@appveyor.com'"
   - bash -c "git config --global user.name 'AppVeyor'"
   - bash -c "if [ \"$DO_PUSH_ARTIFACT\" = yes -a -z \"$APPVEYOR_PULL_REQUEST_NUMBER\" -a \"$APPVEYOR_REPO_NAME\" = \"OpenSC/OpenSC\" ]; then .github/push_artifacts.sh \"AppVeyor build ${APPVEYOR_BUILD_NUMBER}.${APPVEYOR_JOB_NUMBER}\"; fi"
+
+#deploy:
+#- provider: Webhook
+#  url: #https://app.signpath.io/API/v1/8d2463fe-39bd-4a41-bb72-f008b4b1fe17/Integrations/AppVeyor?ProjectSlug=OpenSC&SigningPolicySlug=release-signing&ArtifactConfigurationSlug=initial
+#  authorization:
+#     secure: 73Qvk9MbD7M7ZcoO6NnSH7zDA+9wSKZqNc602b1UeA5v6GsDyEvpCOlzJ9VvBcUuePTKBRsZ+uGQYKsddABgQA==
 
 cache:
   - C:\zlib -> .appveyor.yml
