--- a/win32/OpenSC.wxs.in
+++ b/win32/OpenSC.wxs.in
@@ -81,7 +81,7 @@
               </RegistryKey>
             </Component>
 
-            <Directory Id="INSTALLDIR_MINIDRIVER" Name="minidriver">
+            <!--<Directory Id="INSTALLDIR_MINIDRIVER" Name="minidriver">-->
               <Component Id="opensc_minidriver.dll" Guid="0933721b-dcaa-4a03-b687-6ac93311a075" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\minidriver\opensc-minidriver.dll" Vital="yes"/>
               </Component>
@@ -114,19 +114,19 @@
                   <RegistryValue Type="integer" Name="Start" Value="2" KeyPath="yes"/>
                 </RegistryKey>
               </Component>
-            </Directory>
+            <!--</Directory>-->
 
-            <Directory Id="INSTALLDIR_PKCS11" Name="pkcs11">
+            <!--<Directory Id="INSTALLDIR_PKCS11" Name="pkcs11">-->
               <Component Id="opensc_pkcs11.dll" Guid="6548a032-c81e-4eb6-9bd1-23e2fa331428" Win64="$(var.Win64YesNo)">
                 <File Source="$(var.SOURCE_DIR)\src\pkcs11\opensc-pkcs11.dll" Vital="yes"/>
               </Component>
               <Component Id="onepin_opensc_pkcs11.dll" Guid="888f9c56-4931-4911-a7ab-6115e4f65af8" Win64="$(var.Win64YesNo)">
                 <File Name="onepin-opensc-pkcs11.dll" Source="$(var.SOURCE_DIR)\src\pkcs11\opensc-pkcs11.dll" Vital="yes"/>
               </Component>
-            </Directory>
+            <!--</Directory>-->
 
             <!-- Tools have their own folder -->
-            <Directory Id="INSTALLDIR_TOOLS" Name="tools">
+            <!--<Directory Id="INSTALLDIR_TOOLS" Name="tools">-->
               <?ifdef zlib ?>
                 <Component Id="zlib1.dll" Guid="560c2273-1dfd-494f-ae13-051a92cd33b9" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.zlib)\zlib1.dll" Vital="yes"/>
@@ -224,9 +224,9 @@
                   <RegistryValue Type="string" Name="opensc-notify.exe" Value="[INSTALLDIR_TOOLS]opensc-notify.exe" />
                 </RegistryKey>
               </Component>
-            </Directory>
+            <!--</Directory>-->
             <?ifdef OpenSSL ?>
-              <Directory Id="INSTALLDIR_PROFILES" Name="profiles">
+              <!--<Directory Id="INSTALLDIR_PROFILES" Name="profiles">-->
                 <Component Id="cyberflex.profile" Guid="42ef6ffa-9f23-44d0-8560-6dbb7c01bfe8" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.SOURCE_DIR)\src\pkcs15init\cyberflex.profile"/>
                 </Component>
@@ -317,17 +317,17 @@
                 <Component Id="gids.profile" Guid="e45def7d-0fd4-49eb-8944-4442d083cbd6" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.SOURCE_DIR)\src\pkcs15init\gids.profile"/>
                 </Component>
-              </Directory>
+              <!--</Directory>-->
             <?endif ?>
             <?ifdef OpenPACE ?>
-              <Directory Id="INSTALLDIR_CVC" Name="cvc">
+              <!--<Directory Id="INSTALLDIR_CVC" Name="cvc">-->
                 <Component Id="DESRCACC100001" Guid="94e789b2-48c6-46f8-ab7f-b7cadc9309bc" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.SOURCE_DIR)\etc\DESRCACC100001"/>
                 </Component>
                 <Component Id="DESCHSMCVCA00001" Guid="df97eaac-9f7e-4b90-9a32-ab5675511f8a" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.SOURCE_DIR)\etc\DESCHSMCVCA00001"/>
                 </Component>
-              </Directory>
+              <!--</Directory>-->
             <?endif ?>
           </Directory>
           <Directory Id="PKCS11SPYINSTALLDIR" Name="PKCS11-Spy">
