--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -57,19 +57,22 @@ install:
         $env:NMAKE_EXTRA+=" OPENSSL_DEF=/DENABLE_OPENSSL OPENSSL_DIR=C:\OpenSSL-v111-${env:OPENSSL_PF}"
         $env:NMAKE_EXTRA+=" OPENSSL_EXTRA_CFLAGS=/DOPENSSL_SECURE_MALLOC_SIZE=65536"
         If (!(Test-Path C:\zlib )) {
+          echo "downloading zlib..."
           appveyor DownloadFile "https://github.com/madler/zlib/archive/v${env:ZLIB_VER_DOT}.zip" -FileName zlib.zip
           7z x zlib.zip -oC:\
           Rename-Item -path "c:\zlib-${env:ZLIB_VER_DOT}" -newName "zlib"
         }
         If (!(Test-Path C:\openpace )) {
+          echo "downloading openpace..."
           appveyor DownloadFile "https://github.com/frankmorgner/openpace/archive/${env:OPENPACE_VER}.zip" -FileName openpace.zip
           7z x openpace.zip -oC:\
-          Rename-Item -path "c:\openpace-${env:OPENPACE_VER}" -newName "openpace"
+          Rename-Item -path "C:\openpace-${env:OPENPACE_VER}" -newName "openpace"
         }
       }
       If (!(Test-Path cpdksetup.exe )) {
           appveyor DownloadFile "https://download.microsoft.com/download/1/7/6/176909B0-50F2-4DF3-B29B-830A17EA7E38/CPDK_RELEASE_UPDATE/cpdksetup.exe"
       }
+  - openssl version || echo "OpenSSL is not installed"
   - echo "Using %APPVEYOR_BUILD_WORKER_IMAGE% with %VCVARSALL%"
   - call "%VCVARSALL%" %Platform%
   - cpdksetup.exe /quiet
@@ -81,6 +84,7 @@ build_script:
       if (!($env:Configuration -Like "*Light*")) {
         If (!(Test-Path -Path "C:\zlib-${env:OPENSSL_PF}" )) {
           # build zlib.lib as a static library
+          echo "building zlib..."
           xcopy C:\zlib C:\zlib-${env:OPENSSL_PF} /e /i /y /s
           cd C:\zlib-${env:OPENSSL_PF}
           (Get-Content win32/Makefile.msc).replace('-MD', '-MT') | Set-Content win32/Makefile.msc
@@ -89,6 +93,7 @@ build_script:
         $env:NMAKE_EXTRA+=" ZLIBSTATIC_DEF=/DENABLE_ZLIB_STATIC ZLIB_INCL_DIR=/IC:\zlib-${env:OPENSSL_PF} ZLIB_LIB=C:\zlib-${env:OPENSSL_PF}\zlib.lib"
         If (!(Test-Path -Path "C:\openpace-${env:OPENSSL_PF}" )) {
           # build libeac.lib as a static library
+          echo "building openpace..."
           xcopy C:\openpace C:\openpace-${env:OPENSSL_PF} /e /i /y /s
           cd C:\openpace-${env:OPENSSL_PF}\src
           # OpenSSL 1.1.0
@@ -107,7 +112,7 @@ build_script:
   - bash -c "exec 0</dev/null && if [ \"$APPVEYOR_REPO_BRANCH\" != \"master\" -a -z \"$APPVEYOR_PULL_REQUEST_NUMBER\" ]; then ./bootstrap.ci -s \"-$APPVEYOR_REPO_BRANCH\"; fi"
   - bash -c "exec 0</dev/null && if [ \"$APPVEYOR_REPO_BRANCH\" != \"master\" -a -n \"$APPVEYOR_PULL_REQUEST_NUMBER\" ]; then ./bootstrap.ci -s \"-$APPVEYOR_REPO_BRANCH-prAPPVEYOR_PULL_REQUEST_NUMBER\"; fi"
   # disable features to speed up the script
-  - bash -c "exec 0</dev/null && ./configure --with-cygwin-native --disable-readline --disable-zlib || cat config.log"
+  - bash -c "exec 0</dev/null && ./configure --with-cygwin-native --disable-readline || cat config.log"
   - bash -c "exec 0</dev/null && rm src/getopt.h"
   - nmake /f Makefile.mak %NMAKE_EXTRA%
   - cd win32 && nmake /nologo /f Makefile.mak %NMAKE_EXTRA% OpenSC.msi && cd ..
